# juice-power

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  guidelines.md
cmake/: imgui.cmake
docs/: graphics.md  map.md  pe.md
maps/0/: 0.json  map.json  resources.json
shaders/: colored_triangle_mesh.vert  default_lit.frag  funky_triangle.frag  gradient.comp  gradient_color.comp  input_structures.glsl  line.frag  line.vert  mesh.frag  mesh.vert  mesh_pbr.frag  pbr_header.glsl  point.frag  point.vert  scene_data.glsl  tex_image.frag  textured_lit.frag  tri_mesh.vert  tri_mesh_descriptors.vert  tri_mesh_pushconstants.vert  tri_mesh_ssbo.vert  triangle.frag  triangle.vert
src/: algorithms.cpp  algorithms.h  aligned_vector.h  backtrace.cpp  backtrace.h  config.h  defines.h  helpers.h  keywords.h  main.cpp  orchestrator.cpp  orchestrator.h  pointer.h  states.h  threadpool.cpp  threadpool.h  utils.h
src/entity/: components.h  entity.h  vector.h
src/graphics/: align_check.h  alignment.h  allocatedimage.h  checks.cpp  chunk.h  defines.cpp  defines.h  descriptorbuilder.cpp  descriptorbuilder.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  enums.h  error.cpp  error.h  failure.cpp  failure.h  initializers.cpp  initializers.h  material.cpp  material.h  objectdata.h  pipelinebuilder.cpp  pipelinebuilder.h  resources.cpp  resources.h  scene.h  structs.cpp  structs.h  types.h  utils.cpp  utils.h  vma.cpp  vma.h
src/input/: defines.h  engine.cpp  engine.h
src/loaders/: enums.h  json.h  map.cpp  map.h  packing.cpp  packing.h
src/pe/: README.md
src/physics/: defines.h  engine.cpp  engine.h  entity.cpp  entity.h
src/vk/: README.md  allocatedimage.h  camera.cpp  camera.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  initializers.cpp  initializers.h  loadedgltf.cpp  loadedgltf.h  loader.cpp  loader.h  material.cpp  material.h  node.cpp  node.h  pipelinebuilder.cpp  pipelinebuilder.h  renderable.h  renderobject.h  structs.cpp  structs.h  types.h  utils.cpp  utils.h  vma.cpp  vma.h
src/world/: chunk.h  objectdata.h  scene.h
submodules/: CMakeLists.txt
submodules/pack2/: CMakeLists.txt
tests/: CMakeLists.txt
